--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "@human-writes/core",
   "packageManager": "yarn@3.5.1",
-  "description": "Write HTML and code snippet like a human",
+  "type": "commonjs",
   "version": "0.5.50",
-  "main": "index.js",
+  "description": "Write HTML and code snippet like a human",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./index.d.ts",
+        "default": "./index.mjs"
+      },
+      "require": {
+        "types": "./index.d.ts",
+        "default": "./index.js"
+      }
+    }
+  },
   "scripts": {
     "dev": "webpack --config webpack.config.mjs",
     "build": "gulp -f gulpfile.mjs",
@@ -14,8 +26,16 @@
     "type": "git",
     "url": "git@github.com:human-writes/core.git"
   },
-  "type": "commonjs",
-  "module": "index.js",
+  "types": "index.d.ts",
+  "main": "index.js",
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "HTML",
     "code-snippet",
@@ -42,6 +62,8 @@
     "gulp-cli": "^2.3.0",
     "path": "^0.12.7",
     "prettier": "^2.8.8",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
     "webpack-stream": "^7.0.0"
