--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@human-writes/core",
   "packageManager": "yarn@3.5.1",
-  "type": "commonjs",
+  "type": "module",
   "version": "0.5.50",
   "description": "Write HTML and code snippet like a human",
   "exports": {
@@ -9,10 +9,6 @@
       "import": {
         "types": "./index.d.ts",
         "default": "./index.mjs"
-      },
-      "require": {
-        "types": "./index.d.ts",
-        "default": "./index.js"
       }
     }
   },
