--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "description": "Write HTML and code snippet like a human",
   "exports": {
     ".": {
-      "import": {
-        "types": "./index.d.ts",
-        "default": "./index.mjs"
-      }
+      "types": "./types/index.d.ts"
     }
   },
   "files": [
-    "src/*"
+    "src/**/*"
   ],
   "scripts": {
     "dev": "webpack --config webpack.config.js",
@@ -29,9 +26,9 @@
     "url": "https://github.com/human-writes/core/issues"
   },
   "homepage": "https://github.com/human-writes/core#readme",
-  "types": "index.d.ts",
+  "types": "./index.d.ts",
   "typings": "./typings, ./node_modules",
-  "module": "@human-writes/core.d.ts",
+  "module": "./index.d.ts",
   "main": "index.js",
   "release": {
     "branches": [
