--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,23 @@
 {
     "compilerOptions": {
       "outDir": "./dist",
-      "module": "ES2022",
-      "target": "ES2022",
       "noImplicitAny": true,
       "sourceMap": false,
-      "allowJs": true
+      "allowJs": true,
+      "target": "esnext",
+      "experimentalDecorators": true,
+      "lib": ["dom", "esnext"],
+      "module": "esnext",
+      "moduleResolution": "node",
+      "strict": true,
+      "noEmit": true,
+      "paths": {
+        "core": ["../index.d.ts"]
+      }
     },
     "include": [
       "src/**/*",
       "index.ts"
-    ]
-  }
+    ],
+    "compileOnSave": false
+}
