--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "strict": true,
       "noEmit": true,
       "paths": {
-        "core": ["../index.d.ts"]
+        "core": ["./types/index.d.ts"]
       }
     },
     "include": [
