--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "description": "Write HTML and code snippet like a human",
   "scripts": {
     "dev": "webpack --config webpack.config.js",
-    "build": "gulp -f gulpfile.js",
+    "build": "tsc",
     "lint": "npx eslint --ext .mjs,.cjs,.js ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Nothing to test for now\" && exit 0"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,7 @@
     "url": "https://github.com/human-writes/core/issues"
   },
   "homepage": "https://github.com/human-writes/core#readme",
-  "types": "./types/index.d.ts",
   "typings": "./types",
-  "module": "./index.ts",
   "main": "index.js",
   "release": {
     "branches": [
@@ -43,6 +41,7 @@
     "@babel/eslint-parser": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "@types/node": "^20.2.5",
     "babel-loader": "^9.1.2",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-eslint": "^7.0.0",
@@ -57,6 +56,7 @@
     "path": "^0.12.7",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
