--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,21 @@
 {
-    "compilerOptions": {
-      "outDir": "./dist",
-      "noImplicitAny": true,
-      "sourceMap": false,
-      "allowJs": true,
-      "target": "esnext",
-      "experimentalDecorators": true,
-      "lib": ["dom", "esnext"],
-      "module": "esnext",
-      "moduleResolution": "node",
-      "strict": true,
-      "noEmit": true,
-      "paths": {
-        "core": ["./types/index.d.ts"]
-      }
-    },
-    "include": [
-      "src/**/*",
-      "index.ts"
-    ],
-    "compileOnSave": false
+  // Change this to match your project
+  "include": ["src/**/*"],
+  "compilerOptions": {
+    // Tells TypeScript to read JS files, as
+    // normally they are ignored as source files
+    "allowJs": true,
+    // Generate d.ts files
+    "declaration": true,
+    // This compiler run should
+    // only output d.ts files
+    "emitDeclarationOnly": true,
+    // Types should go into this directory.
+    // Removing this would place the .d.ts files
+    // next to the .js files
+    "outDir": "dist",
+    // go to js file when using IDE functions like
+    // "Go to Definition" in VSCode
+    "declarationMap": true
+  }
 }
