--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "0.5.61",
   "description": "Write HTML and code snippet like a human",
   "scripts": {
-    "dev": "webpack --config webpack.config.js",
     "build": "tsc",
     "lint": "npx eslint --ext .mjs,.cjs,.js ./src",
     "test": "echo \"Nothing to test for now\" && exit 0"
   },
+  "types": "./types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:human-writes/core.git"
@@ -50,16 +50,10 @@
     "eslint-plugin-jsdoc": "^45.0.0",
     "eslint-plugin-node": "^11.1.0",
     "glob-parent": "^6.0.2",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "4.3.0",
-    "gulp-cli": "^2.3.0",
     "path": "^0.12.7",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-stream": "^7.0.0"
+    "typescript": "^5.1.3"
   }
 }
